# AutoAnalyst

./: .gitignore  Dockerfile  README.md  frontend.py  main.ipynb  main.py  pyproject.toml  registry.py  requirements.txt  tools.py
src/autoanalyst/: frontend.py  main.py  tools.py
src/autoanalyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
