[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoanalyst"
version = "0.1.0"
description = "AutoAnalyst: An agentic AI system that automates data analysis using LLMs and tool-based workflows."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Rishita Sharma" }
]

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",

    "langchain",
    "langgraph",
    "langchain-groq",

    "python-dotenv",
    "pydantic",

    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]



